--- a/链表专题.md
+++ b/链表专题.md
@@ -239,3 +239,39 @@ public:
 #### 92. Reverse Linked List II
 <img src="https://github.com/gbyy422990/Leetcode_c-/blob/master/images/image-20190928205321336.png" width="100%" height="100%">
 
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* reverseBetween(ListNode* head, int m, int n) {
+        if(head == NULL) return NULL;
+        if(m == n) return head;
+        
+        auto dummy = new ListNode(-1);
+        dummy -> next = head;
+        auto a = dummy, d = dummy;
+        for(int i = 0; i < m - 1; i++) a = a -> next;
+        for(int i = 0; i < n; i++) d = d -> next;
+        
+        auto b = a -> next, c = d -> next;
+        
+        // 某区间链表反转
+        for(auto p = b, q = b -> next; q != c; ){
+            auto o = q -> next;
+            q -> next = p;
+            p = q, q = o;
+        }
+        
+        a -> next = d;
+        b -> next = c;
+        return dummy -> next;
+    }
+};
+```
