--- a/链表专题.md
+++ b/链表专题.md
@@ -61,8 +61,7 @@
 <img src="https://github.com/gbyy422990/Leetcode_c-/blob/master/images/image-20190928174455740.png" width="100%" height="100%">
 
 我们把node伪装一下，把node后面的值复制到node上：
-
-![image-20190928175153020](/Users/bingao/Documents/leetcode/image-20190928175153020.png)
+<img src="https://github.com/gbyy422990/Leetcode_c-/blob/master/images/image-20190928175153020.png" width="100%" height="100%">
 
 ```
 /**
