--- a/链表专题.md
+++ b/链表专题.md
@@ -274,3 +274,153 @@ public:
     }
 };
 ```
+
+#### 160. Intersection of Two Linked Lists
+
+解法一：很自然的思路，先分别遍历两个链表求的两个链表的长度，让长度较长的链表先走完这个长度差，然后两个链表一起移动第一次相等就是答案。
+
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode *getIntersectionNode(ListNode *headA, ListNode *headB) {
+        auto a = headA, b = headB;
+        int lenA = 0, lenB = 0;
+        
+        if(headA == NULL || headB == NULL) return NULL;
+        
+        for(auto p = a; p != NULL; p = p->next) lenA++;
+        for(auto p = b; p != NULL; p = p->next) lenB++;
+        
+        if(lenA > lenB){
+            for(int i = 0; i < lenA - lenB; i++){
+                a = a -> next;
+            }
+        }
+        if(lenA < lenB){
+            for(int i = 0; i < lenB - lenA; i++){
+                b = b -> next;
+            }
+        }
+        
+        if(a == b) return a;
+        while(a != NULL){
+            a = a -> next;
+            b = b -> next;
+            if(a == b){
+                return a;
+            }
+        }
+        return NULL; 
+    }
+};
+```
+
+
+
+解法二：
+
+这题的思路很巧妙，我们先给出做法，再介绍原理。
+
+算法步骤：
+
+用两个指针分别从两个链表头部开始扫描，每次分别走一步；
+如果指针走到null，则从另一个链表头部开始走；
+当两个指针相同时，
+如果指针不是null，则指针位置就是相遇点；
+如果指针是 null，则两个链表不相交；
+此题我们画图讲解，一目了然：
+
+11. 两个链表不相交：
+<img src="https://github.com/gbyy422990/Leetcode_c-/blob/master/images/image-20190929193043664.png" width="100%" height="100%">
+
+a,ba,b 分别代表两个链表的长度，则两个指针分别走 a+ba+b 步后都变成 null。
+
+22. 两个链表相交：
+<img src="https://github.com/gbyy422990/Leetcode_c-/blob/master/images/image-20190929193101897.png" width="100%" height="100%">
+
+
+则两个指针分别走 a+b+ca+b+c 步后在两链表交汇处相遇。
+
+时间复杂度分析：每个指针走的长度不大于两个链表的总长度，所以时间复杂度是 O(n)O(n)。
+
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode *getIntersectionNode(ListNode *headA, ListNode *headB) {
+        auto a = headA, b = headB;
+        while(a != b){
+            if(a != NULL) a = a -> next;
+            else a = headB;
+            
+            if(b != NULL) b = b -> next;
+            else b = headA;
+        }
+        return a;
+    }
+};
+```
+
+
+
+#### 142. Linked List Cycle II
+
+用两个指针 first,secondfirst,second 分别从起点开始走，firstfirst 每次走一步，secondsecond 每次走两步。
+如果过程中 secondsecond 走到null，则说明不存在环。否则当 firstfirst 和 secondsecond 相遇后，让 firstfirst 返回起点，secondsecond 待在原地不动，然后两个指针每次分别走一步，当相遇时，相遇点就是环的入口。
+<img src="https://github.com/gbyy422990/Leetcode_c-/blob/master/images/image-20190929200536103.png" width="100%" height="100%">
+
+证明：如上图所示，aa 是起点，bb 是环的入口，cc 是两个指针的第一次相遇点，abab 之间的距离是 xx，bcbc 之间的距离是 yy。
+则当 firstfirst 走到 bb 时，由于 secondsecond 比 firstfirst 多走一倍的路，所以 secondsecond 已经从 bb 开始在环上走了 xx 步，可能多余1圈，距离 bb 还差 yy 步（这是因为第一次相遇点在 bb 之后 yy 步，我们让 firstfirst 退回 bb 点，则 secondsecond 会退 2y2y 步，也就是距离 bb 点还差 yy 步）；所以 secondsecond 从 bb 点走 x+yx+y 步即可回到 bb 点，所以 secondsecond 从 cc 点开始走，走 xx 步即可恰好走到 bb 点，同时让 firstfirst 从头开始走，走 xx 步也恰好可以走到 bb 点。所以第二次相遇点就是 bb 点。
+
+可以用公式来说明：a,b,c,x,ya,b,c,x,y 的含义同上，我们用 zz 表示从 cc 点顺时针走到 bb 的距离。则第一次相遇时 secondsecond 所走的距离是 x+(y+z)∗n+yx+(y+z)∗n+y, nn 表示圈数，同时 secondsecond 走过的距离是 firstfirst 的两倍，也就是 2(x+y)2(x+y)，所以我们有 x+(y+z)∗n+y=2(x+y)x+(y+z)∗n+y=2(x+y)，所以 x=(n−1)×(y+z)+zx=(n−1)×(y+z)+z。那么我们让 secondsecond 从 cc 点开始走，走 xx 步，会恰好走到 bb 点；让 firstfirst 从 aa 点开始走，走 xx 步，也会走到 bb 点。
+
+时间复杂度分析：firstfirst 总共走了 2x+y2x+y 步，secondsecond 总共走了 2x+2y+x2x+2y+x 步，所以两个指针总共走了 5x+3y5x+3y 步。由于当第一次 firstfirst 走到 bb 点时，secondsecond 最多追一圈即可追上 firstfirst，所以 yy 小于环的长度，所以 x+yx+y 小于等于链表总长度。所以总时间复杂度是 O(n)O(n)。
+
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode *detectCycle(ListNode *head) {
+        auto fast = head, slow = head;
+        while(fast && slow){
+            slow = slow -> next;
+            fast = fast -> next;
+            if(fast != NULL) fast = fast -> next;
+            else return NULL;
+            
+            if(fast == slow){
+                slow = head;
+                while(fast != slow){
+                    fast = fast -> next;
+                    slow = slow -> next;
+                }
+                return fast;
+            }
+        }
+        return NULL;
+    }
+};
+```
+
