--- a/滑动窗口、双指针、单调队列和单调栈.md
+++ b/滑动窗口、双指针、单调队列和单调栈.md
@@ -59,14 +59,12 @@ public:
 
 两个指针i和j，i先从起始位置0往后走，直到包含所有的字串为止，然后j=i，j往回走，直到找到最后一个子串中的元素。
 
-![image-20191002105213577](/Users/bingao/Documents/leetcode/image-20191002105213577.png)
-
+<img src="https://github.com/gbyy422990/Leetcode_cpp/blob/master/images/image-20191002105213577.png" width="100%" height="100%">
 上图就是暴力做法，时间复杂度O(n^2) 。
 
 
 
-![image-20191002105631838](/Users/bingao/Documents/leetcode/image-20191002105631838.png)
-
+<img src="https://github.com/gbyy422990/Leetcode_cpp/blob/master/images/image-20191002105631838.png" width="100%" height="100%">
 `````
 class Solution {
 public:
@@ -333,12 +331,11 @@ public:
 
 把环展开成2n的线段，如下所示。
 
-![image-20191003114933952](/Users/bingao/Documents/leetcode/image-20191003114933952.png)
 
+<img src="https://github.com/gbyy422990/Leetcode_cpp/blob/master/images/image-20191003114933952.png" width="100%" height="100%">
 那么对于这道题来说，就是在2n的链里面找长度大于等于1，小于等于n的区间最大值即可。
 
-![image-20191003115313137](/Users/bingao/Documents/leetcode/image-20191003115313137.png)
-
+<img src="https://github.com/gbyy422990/Leetcode_cpp/blob/master/images/image-20191003115313137.png" width="100%" height="100%">
 就是一个滑动窗口求极值的问题，固定i为终点之后，在区间为1到n的范围内找最大值。
 
 将原数组扩充一倍后，这道题可以视为长度最多为 nn 最长连续子序列。先对求前缀和数组 sum。
