--- a/字符串处理专题.md
+++ b/字符串处理专题.md
@@ -85,8 +85,8 @@ public:
 
 给点的邮箱地址，拆成两部分（用户名和域名），再把新的用户名和域名拼在一起，剩下的就是判断有多少个新的email
 
-![image-20191004120557506](/Users/bingao/Documents/leetcode/image-20191004120557506.png)
 
+<img src="https://github.com/gbyy422990/Leetcode_c-/blob/master/images/image-20191004120557506.png" width="100%" height="100%">
 ````````
 class Solution {
 public:
@@ -143,9 +143,7 @@ public:
 
 
 ####6. ZigZag Conversion
-
-![image-20191004154349246](/Users/bingao/Documents/leetcode/image-20191004154349246.png)
-
+<img src="https://github.com/gbyy422990/Leetcode_c-/blob/master/images/image-20191004154349246.png" width="100%" height="100%">
 
 
 #### 3. Longest Substring Without Repeating Characters
